--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur officia corporis aliquid voluptas assumenda cumque illum a nam debitis. Molestias deleniti iste voluptatibus illo? Molestias iure reiciendis quo est in.
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repudiandae ad enim laboriosam dolor reiciendis totam illum aspernatur consequuntur voluptatem atque mollitia repellendus, ex hic nesciunt. Accusantium illum ea dolorem.
 							Nostrum, eius facere eveniet delectus praesentium unde quia amet nulla ex exercitationem rerum, tenetur eaque tempora adipisci minus distinctio reiciendis libero odit. Facilis debitis beatae ipsum incidunt asperiores, commodi sapiente.
-						
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur officia corporis aliquid voluptas assumenda cumque illum a nam debitis. Molestias deleniti iste voluptatibus illo? Molestias iure reiciendis quo est in.
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repudiandae ad enim laboriosam dolor reiciendis totam illum aspernatur consequuntur voluptatem atque mollitia repellendus, ex hic nesciunt. Accusantium illum ea dolorem.
+							Nostrum, eius facere eveniet delectus praesentium unde quia amet nulla ex exercitationem rerum, tenetur eaque tempora adipisci minus distinctio reiciendis libero 
 						</div>
 						<div class="training__img-text img-text">
 							<img class="img-text__image2" src="img/image5.jpg" alt="">
@@ -198,7 +200,9 @@
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repudiandae ad enim laboriosam dolor reiciendis totam illum aspernatur consequuntur voluptatem atque mollitia repellendus, ex hic nesciunt. Accusantium illum ea dolorem.
 							Nostrum, eius facere eveniet delectus praesentium unde quia amet nulla ex exercitationem rerum, tenetur eaque tempora adipisci minus distinctio reiciendis libero odit. Facilis debitis beatae ipsum incidunt asperiores, commodi sapiente.
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quam aliquid beatae ipsam sint ut exercitationem, fugit soluta debitis quae recusandae unde cum placeat tenetur assumenda adipisci natus, perferendis ab.
-						
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur officia corporis aliquid voluptas assumenda cumque illum a nam debitis. Molestias deleniti iste voluptatibus illo? Molestias iure reiciendis quo est in.
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repudiandae ad enim laboriosam dolor reiciendis totam illum aspernatur consequuntur voluptatem atque mollitia repellendus, ex hic nesciunt. Accusantium illum ea dolorem.
+							Nostrum, eius facere eveniet delectus praesentium unde quia amet nulla ex exercitationem rerum, tenetur eaque tempora adipisci minus distinctio reiciendis libero 
 						</div>
 					</div>
 
